testsuite/tests/grammar/invalid_unparser/pick-in-list.lkt
import common

@with_lexer(foo_lexer)
grammar foo_grammar {
    @main_rule main_rule <- list+("example" Root(or(
        pick("example" Identifier(@Identifier))
        | Number(@Number)
    )))
}
